--- a/css/style.css
+++ b/css/style.css
@@ -64,9 +64,9 @@ h1 {
     margin-top: 17px;
 }
 
-/* .hide {
+.hide {
     display: none !important;
-} */
+}    
 
 #score-container {
     font-weight: bold;
@@ -107,5 +107,4 @@ h1 {
     background-color: #000;
     color: #fff;
     padding: 20px;
-    display: none;
 }
